Fix thinko in ARMv7 moveConditionallyTest32 https://bugs.webkit.org/show_bug.cgi?id=283496

Reviewed by Justin Michaud.

When thenCase == elseCase we still need to set the destination to the
common value.

* Source/JavaScriptCore/assembler/MacroAssemblerARMv7.h:
(JSC::MacroAssemblerARMv7::moveConditionallyTest32):

Canonical link: https://commits.webkit.org/286946@main